# rust-macaddr

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
benches/: parse.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: macaddr6_from_str.rs  macaddr8_from_str.rs  macaddr_from_str.rs
src/: addr.rs  addr6.rs  addr8.rs  lib.rs
src/parser/: mod.rs  tests.rs
